# spbu-practice

./: .gitattributes  .gitignore  .gitmodules  LICENSE  PMEval.hs  PMMain.hs  PMParser.hs  README.md  c_bubble_sort.c  c_comparator.c  c_insertion_sort.c  c_merge_sort.c  c_quick_sort.c  c_swap.c  calculator.c  comparator.c  gauss_method.c  gauss_method.h  gilb_matr.c  grammar0.txt  grammar1_1.txt  h_bubble_sort.h  h_comparator.h  h_swap.h  in.txt  input.txt  insertion_sort.c  long_arithmetic.c  long_arithmetic.h  long_numbers.c  long_numbers.h  main.c  main_sort.c  matrix.h  merge_sort.h  mmap_sort.c  operations.c  operations.h  out.txt  prime_grammar.py  (+11 more)
1.reg/: README.md
1.sem/1.c.string.sort/: quick_sort.c
1.sem/1.string.sort/: quick_sort.h
1.sem/2.c.string.sort.mmap/: comparator.c  merge_sort.c
1.sem/2.string.sort.mmap/: README.md  bubble_sort.c  mmap_sort.c  print_strings.c
1.sem/3.buffer.overrun/: README.md
1.sem/3.c.buffer.overrun/: Attack.c
1.sem/4.stack.calc/: long_numbers.c  long_numbers.h
1_sem/string.sort/: bubble_sort.c  in.txt  insertion_sort.c  insertion_sort.h  main_sort.c  merge_sort.c
1_sem/string.sort.mmap/: bubble_sort.h  comparator.h  insertion_sort.h  quick_sort.h  swap.c  swap.h
2.map/: README.md
2.sem/1.kotlin.trees/: README.md
3.sem/4.haskell.exam.pmatch/: PMEval.hs  my-project.cabal
4.btc/: n.s
BinarySearchTreeParallel/: Program.cs  TreeParallel.cs  output.txt
WebPages/: Program.cs
by_copy_string/: new_folder
hometask/: data_type.hs  week3.hs
src/B_tree/: BNode.kt  (+1 more)
throw and watch/: .gitignore
tmp/: tmp1.hs
(+145 files in other folders)
