name:                my-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-project#readme
license:             BSD3
author:              Author name here
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable demoPMLang
  hs-source-dirs:      .
  main-is:             PMMain.hs
  other-modules:       PMEval,PMParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, text, hashable

Test-Suite test-pmlang
  hs-source-dirs:    .
  type:              exitcode-stdio-1.0
  main-is:           test-pmlang.hs
  other-modules:     PMEval,PMParser
  default-language:  Haskell2010
  build-depends:     base, parsec, text, HUnit, hashable
